--- a/Nau/CSS/index.html
+++ b/Nau/CSS/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="content">
-      <div class="box box1">Khối 1</div>
-      <div class="box box2">Khối 2</div>
-      <div class="box box3">Khối 3</div>
-      <h1>Tuhoc.cc</h1>
+    <div class="container">
+      <div class="box box1">Block 1</div>
+      <div class="box box2">Block 2</div>
+      <div class="box box3">Block 3</div>
+      <div class="box box4">Block 4</div>
+      <div class="box box5">Block 5</div>
     </div>
   </body>
 </html>
